@@ -1817,7 +1817,7 @@ static struct Damage battle_calc_weapon_attack(
 		ATK_ADD(15*skill_lv);
 
 	if (!(nk&NK_NO_ELEFIX) ||
-		(s_ele == ELE_NEUTRAL && (battle_config.attack_attr_none&src->type)))
+		(s_ele == ELE_NEUTRAL && !(battle_config.attack_attr_none&src->type)))
 	{	//Elemental attribute fix
 		if (wd.damage > 0)
 		{
